--- a/ride-and-seek-photo-wall/index.html
+++ b/ride-and-seek-photo-wall/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Ride and Seek 活动照片墙 - 记录精彩瞬间">
+    <meta name="description" content="Ride and Seek - Photo wall 活动照片墙">
     <title>Ride and Seek - 活动照片墙</title>
     <style>
         * {
@@ -119,8 +119,8 @@
 <body>
     <div class="container">
         <header>
-            <h1>🚴 Ride and Seek</h1>
-            <div class="subtitle">活动精彩瞬间照片墙</div>
+            <h1>2025-11-21 🚴Ride and Seek</h1>
+            <div class="subtitle">the moment worth remembering</div>
         </header>
 
         <div class="gallery">
