--- a/personal-information/index.html
+++ b/personal-information/index.html
@@ -14,9 +14,15 @@
 
 
 <!-- Top Navigation Bar -->
-<header class="topbar">
+<header class="topbar" id="topbar">
     <div class="topbar-right">
-        <button id="print-btn" class="nav-btn">Print</button>
+        <button id="copy-btn" class="nav-btn">Copy</button>
+        <button id="select-btn" class="nav-btn">Select</button>
+        <div class="selection-controls">
+            <button id="cancel-btn" class="nav-btn secondary">Cancel</button>
+            <button id="print-btn" class="nav-btn success">Print</button>
+            <button id="download-btn" class="nav-btn">Download</button>
+        </div>
     </div>
 </header>
 
@@ -55,16 +61,19 @@
         <section id="Education">
             <h2 class="section-title">Education</h2>
 
-            <div class="item">
-                <img src="images/DKU.png" alt="Duke Kunshan University">
-                <div class="item-content">
-                    <div class="item-title">Duke Kunshan University 昆山杜克大学</div>
-                    <div class="item-desc">
-                        Courses: Calculus, English for Academic Purpose, Crafting Narrative in Video Games.<br>
-                        已修课程：微积分、学术英语、电子游戏叙事创作。
-                    </div>
+        <div class="item">
+            <img src="images/DKU.png" alt="Duke Kunshan University">
+            <div class="item-content">
+                <div class="item-title">Duke Kunshan University 昆山杜克大学</div>
+                <div class="item-desc">
+                    Courses: Calculus, English for Academic Purpose, Crafting Narrative in Video Games.<br>
+                    已修课程：微积分、学术英语、电子游戏叙事创作。
                 </div>
             </div>
+            <div class="item-checkbox">
+                <input type="checkbox" class="select-checkbox">
+            </div>
+        </div>
 
             <div class="item">
                 <img src="images/IELTS - 20240908.jpg" alt="IELTS Certificate">
@@ -74,6 +83,9 @@
                         Overall: 7.0 | Listening: 8.0 | Reading: 6.0 | Writing: 6.0 | Speaking: 7.0 <br>
                         雅思学术类考试总分7.0分，听力8.0分，阅读6.0分，写作6.0分，口语7.0分
                     </div>
+                </div>
+                <div class="item-checkbox">
+                    <input type="checkbox" class="select-checkbox">
                 </div>
             </div>
 
@@ -85,6 +97,9 @@
                         Received secondary education in Changzhou Senior High School of Jiangsu Province.<br>
                         在江苏省常州市高级中学接受高中教育，并于2025年6月25日毕业。
                     </div>
+                </div>
+                <div class="item-checkbox">
+                    <input type="checkbox" class="select-checkbox">
                 </div>
             </div>
         </section>
@@ -102,6 +117,9 @@
                         组织主题寻宝活动，为参与者带来愉快体验，同时收集校园自行车管理的创新建议。
                     </div>
                 </div>
+                <div class="item-checkbox">
+                    <input type="checkbox" class="select-checkbox">
+                </div>
             </div>
 
             <div class="item">
@@ -112,6 +130,9 @@
                         Helped establish DKU Cycling Club, designed posters, conducted promotion activities, and communicated with GIANT Foundation and school departments.<br>
                         协助成立昆山杜克大学骑行俱乐部，设计海报，开展宣传活动，与捷安特基金会和学校部门沟通。
                     </div>
+                </div>
+                <div class="item-checkbox">
+                    <input type="checkbox" class="select-checkbox">
                 </div>
             </div>
 
@@ -124,6 +145,9 @@
                         负责IT支持工作，管理多媒体系统，制作活动演示文稿，确保会议期间演示顺利。
                     </div>
                 </div>
+                <div class="item-checkbox">
+                    <input type="checkbox" class="select-checkbox">
+                </div>
             </div>
 
             <div class="item">
@@ -134,6 +158,9 @@
                         Service as volunteer for supplies preparation, transportation, and UNGC committee during the MUN conference.<br>
                         作为志愿者参与物资准备和运输工作，并在模拟联合国期间担任联合国全球大会委员会志愿者。
                     </div>
+                </div>
+                <div class="item-checkbox">
+                    <input type="checkbox" class="select-checkbox">
                 </div>
             </div>
 
@@ -146,6 +173,9 @@
                         为团体表演制作并编辑背景视频，运用视频编辑技术提升舞台效果。
                     </div>
                 </div>
+                <div class="item-checkbox">
+                    <input type="checkbox" class="select-checkbox">
+                </div>
             </div>
 
             <div class="item">
@@ -156,6 +186,9 @@
                         Learned about cultural difference, blockchain and management in the experience camp of Master in International Management.<br>
                         在中欧国际商学院全球管理硕士体验营中了解文化差异、区块链以及管理知识。
                     </div>
+                </div>
+                <div class="item-checkbox">
+                    <input type="checkbox" class="select-checkbox">
                 </div>
             </div>
         </section>
@@ -172,6 +205,9 @@
                         在第三十五届江苏省青少年科技创新大赛中获得二等奖，通过展览形式进行最终比赛。
                     </div>
                 </div>
+                <div class="item-checkbox">
+                    <input type="checkbox" class="select-checkbox">
+                </div>
             </div>
 
             <div class="item">
@@ -182,6 +218,9 @@
                         Achieved second prize in the China High School Biology Olympiad competition.<br>
                         在中国高中生物奥林匹克竞赛中获得二等奖。
                     </div>
+                </div>
+                <div class="item-checkbox">
+                    <input type="checkbox" class="select-checkbox">
                 </div>
             </div>
 
@@ -194,6 +233,9 @@
                         完成心理健康急救课程，学习为心理健康问题和危机提供初步支持。
                     </div>
                 </div>
+                <div class="item-checkbox">
+                    <input type="checkbox" class="select-checkbox">
+                </div>
             </div>
 
             <div class="item">
@@ -204,6 +246,9 @@
                         Received CPR training and certification from Kunshan Red Cross Society.<br>
                         参加心肺复苏术培训，从昆山红十字会获得证书。
                     </div>
+                </div>
+                <div class="item-checkbox">
+                    <input type="checkbox" class="select-checkbox">
                 </div>
             </div>
         </section>
@@ -220,6 +265,9 @@
                     </div>
                 </div>
                 <img src="images/Talent Show - Background Image.jpg" alt="Video Editing">
+                <div class="item-checkbox">
+                    <input type="checkbox" class="select-checkbox">
+                </div>
             </div>
 
             <div class="item">
@@ -231,6 +279,9 @@
                         能创建实用的Python脚本和AutoHotkey脚本提高效率，精通Markdown和Obsidian，在GitHub上开发开源MCP服务器。
                     </div>
                 </div>
+                <div class="item-checkbox">
+                    <input type="checkbox" class="select-checkbox">
+                </div>
             </div>
 
             <div class="item">
@@ -240,6 +291,9 @@
                         Extensive daily interaction with LLMs, skilled in crafting effective prompts and optimizing AI interactions.<br>
                         每天与大型语言模型进行大量互动，擅长制作有效的提示词和优化AI交互。
                     </div>
+                </div>
+                <div class="item-checkbox">
+                    <input type="checkbox" class="select-checkbox">
                 </div>
             </div>
         </section>
@@ -258,6 +312,9 @@
                         <a href="https://github.com/EarthTan/local-file-operating" target="_blank">GitHub Repository</a>
                     </div>
                 </div>
+                <div class="item-checkbox">
+                    <input type="checkbox" class="select-checkbox">
+                </div>
             </div>
         </section> 
 
@@ -265,5 +322,6 @@
 </div>
 
 <script src="scripts/navigation.js"></script>
+<script src="scripts/selection.js"></script>
 </body>
 </html>
