--- a/personal-information/index.html
+++ b/personal-information/index.html
@@ -109,12 +109,14 @@
             <h2 class="section-title">Experience</h2>
 
             <div class="item">
-                <img src="images/U-Crop - Participants 照片.jpg" alt="U-Corp Project">
+                <img src="images/U-Crop -  场地布置照片.jpg" alt="U-Corp Project">
                 <div class="item-content">
                     <div class="item-title">U-Corp Project 校企联合创新实验室项目</div>
                     <div class="item-desc">
                         Organized a themed scavenger-hunt activity that successfully delivered an enjoyable experience while gathering innovative suggestions for campus bicycle management.<br>
-                        组织主题寻宝活动，为参与者带来愉快体验，同时收集校园自行车管理的创新建议。
+                        组织主题寻宝活动，为参与者带来愉快体验，同时收集校园自行车管理的创新建议。<br><br>
+                        Activity Photowall | 活动照片墙：<a href="https://earthtan.github.io/Webpages/ride-and-seek-photo-wall/" target="_blank">2025-11-21 🚴Ride and Seek</a>
+
                     </div>
                 </div>
                 <div class="item-checkbox">
