--- a/personal-information/index.html
+++ b/personal-information/index.html
@@ -76,7 +76,7 @@
         </div>
 
             <div class="item">
-                <img src="images/IELTS - 20240908.jpg" alt="IELTS Certificate">
+                <img src="images/IELTS.png" alt="IELTS Certificate">
                 <div class="item-content">
                     <div class="item-title">IELTS 7.0 雅思7.0</div>
                     <div class="item-desc">
@@ -84,6 +84,7 @@
                         雅思学术类考试总分7.0分，听力8.0分，阅读6.0分，写作6.0分，口语7.0分
                     </div>
                 </div>
+                <img src="images/IELTS - 20240908.jpg" alt="IELTS Certificate">
                 <div class="item-checkbox">
                     <input type="checkbox" class="select-checkbox">
                 </div>
@@ -181,7 +182,7 @@
             </div>
 
             <div class="item">
-                <img src="images/CEIBS - CEIBS精英体验营证书.jpg" alt="CEIBS Camp">
+                <img src="images/CEIBS-logo.png" alt="CEIBS Camp">
                 <div class="item-content">
                     <div class="item-title">CEIBS Elite Experience Camp 中欧国际商学院精英体验营</div>
                     <div class="item-desc">
@@ -189,6 +190,7 @@
                         在中欧国际商学院全球管理硕士体验营中了解文化差异、区块链以及管理知识。
                     </div>
                 </div>
+                <img src="images/CEIBS - CEIBS精英体验营证书.jpg" alt="CEIBS Camp">
                 <div class="item-checkbox">
                     <input type="checkbox" class="select-checkbox">
                 </div>
@@ -272,7 +274,7 @@
                 </div>
             </div>
 
-            <div class="item">
+            <div class="item imgbig">
                 
                 <div class="item-content">
                     <div class="item-title">Coding & Computer Skills 编程与计算机技能</div>
@@ -284,6 +286,7 @@
                 <div class="item-checkbox">
                     <input type="checkbox" class="select-checkbox">
                 </div>
+                <img src="images/coding.png" alt="Video Editing">
             </div>
 
             <div class="item">
