--- a/personal-information/index.html
+++ b/personal-information/index.html
@@ -310,7 +310,10 @@
             <div class="item">
                 <img src="images/github.png" alt="MCP Server Project">
                 <div class="item-content">
-                    <div class="item-title">MCP Server for Obsidian 一个为Obsidian·LLM插件开发的MCP服务</div>
+                    <div class="item-title">
+                        MCP Server for Obsidian 一个为Obsidian·LLM插件开发的MCP服务
+                        <span class="tech-tag python">Python</span>
+                    </div>
                     <div class="item-desc">
                         Developed a Model Context Protocol (MCP) Server specifically designed for Obsidian LLM plugin. 
                         Features include file operations, search functionality, and tag inquiries. <br>
@@ -322,6 +325,27 @@
                     <input type="checkbox" class="select-checkbox">
                 </div>
             </div>
+
+
+            <div class="item">
+                <img src="images/github.png" alt="MCP Server Project">
+                <div class="item-content">
+                    <div class="item-title">
+                        Obsidian Plugin:Tag·Navigator 一个Obsidian插件
+                        <span class="tech-tag js">JavaScript</span>
+                    </div>
+                    <div class="item-desc">
+                        Developed a Obsidian plugin that allows users to navigate to the note through a tag view. <br>
+                        开发了一个Obsidian的插件，该插件能让用户通过标签视图直接访问笔记。<br>
+                        <a href="https://github.com/EarthTan/Tag-Navigator-for-Obsidian" target="_blank">GitHub Repository</a>
+                    </div>
+                </div>
+                <div class="item-checkbox">
+                    <input type="checkbox" class="select-checkbox">
+                </div>
+            </div>
+
+
         </section> 
 
     </div>
