--- a/resume/index.html
+++ b/resume/index.html
@@ -336,7 +336,7 @@
                         MCP Server for Obsidian 一个为Obsidian·LLM插件开发的MCP服务
                         <span class="tech-tag python">Python</span>
                     </div>
-                    <div class="item-keywords">Python, Obsidian, plugin, JavaScript, Vibe Coding</div>
+                    <div class="item-dates">2025-11-20 - 2025-11-27</div>
                     <div class="item-desc">
                         Developed a Model Context Protocol (MCP) Server specifically designed for Obsidian LLM plugin. 
                         Features include file operations, search functionality, and tag inquiries. <br>
@@ -357,7 +357,7 @@
                         Obsidian Plugin:Tag·Navigator 一个Obsidian插件
                         <span class="tech-tag js">JavaScript</span>
                     </div>
-                    <div class="item-keywords">GitHub, Obsidian, plugin, JavaScript, Vibe Coding</div>
+                    <div class="item-dates">2025-11-27</div>
                     <div class="item-desc">
                         Developed a Obsidian plugin that allows users to navigate to the note through a tag view. <br>
                         开发了一个Obsidian的插件，该插件能让用户通过标签视图直接访问笔记。<br>
@@ -376,7 +376,7 @@
                         Obsidian Background Music Plugin 一个Obsidian背景音乐插件
                         <span class="tech-tag js">JavaScript</span>
                     </div>
-                    <div class="item-keywords">GitHub, Obsidian, plugin, JavaScript, Vibe Coding</div>
+                    <div class="item-dates">2025-11-27 - 2025-11-29</div>
                     <div class="item-desc">
                         Automatically Play background music when opening a note based on frontmatter BGM property. <br>
                         一个根据frontmatter中的BGM属性自动播放背景音乐的Obsidian插件。<br>
